--- a/css/style.css
+++ b/css/style.css
@@ -213,12 +213,13 @@ label img {
     overflow: hidden;
     background-size: cover;
     background-position: right top;
-    width: 100;
-    height: 100vh;
-    position: relative;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.wrapper_animation img{
+    width:100%;
 }
 /* 
 .one {
